fix for horizontal scrollbar

--- a/app/assets/sass/hero.scss
+++ b/app/assets/sass/hero.scss
@@ -1,6 +1,6 @@
 .hero {
     background-image: url('../../public/images/ecc-hero-large.png');
-    width: 100vw;
+    width: 100%;
     min-height: 130px;
     background-position-y: center;
     background-repeat:no-repeat;
